# tabelog2

./: .gitignore  README.md  app.py  definition.md  pyproject.toml  scraper.py  utils.py
